Fix image overflowed

--- a/src/browser/note/note-preview/_note-preview-theme.scss
+++ b/src/browser/note/note-preview/_note-preview-theme.scss
@@ -25,6 +25,12 @@
             > * {
                 user-select: text !important;
             }
+
+            img {
+                max-width: 100%;
+                display: block;
+                margin: 0 auto;
+            }
         }
 
         &__snippet--code {
